--- a/client/knowledge_base_search/src/containers/SearchContainer/styles.css
+++ b/client/knowledge_base_search/src/containers/SearchContainer/styles.css
@@ -33,7 +33,7 @@
 
 .tab-panels--tab-content {
   background: inherit;
-  padding: 2rem 0;
+  padding: 2rem 0 0 0;
 }
 
 .base--radio {
